# customersupport_website

./: .gitignore  Cargo.toml  README.md  read.md  run.ps1
backend/: Cargo.toml
backend/src/: app.rs  config.rs  db.rs  main.rs  state.rs
backend/src/dto/: attachment_dto.rs  auth_dto.rs  kb_dto.rs  message_dto.rs  mod.rs  note_dto.rs  notification_dto.rs  ticket_dto.rs
backend/src/handlers/: agent_ticket_handler.rs  analytics_handler.rs  attachment_handler.rs  auth_handler.rs  comment_handler.rs  knowledge_base_handler.rs  message_handler.rs  mod.rs  note_handler.rs  notification_handler.rs  protected.rs  report_handler.rs  ticket_handler.rs  user_handler.rs  ws_handler.rs
backend/src/middleware/: auth.rs  auth_extension.rs  csrf.rs  mod.rs  rate_limit.rs  role_guard.rs
backend/src/models/: analytics.rs  attachment.rs  comment.rs  knowledge_base.rs  message.rs  mod.rs  note.rs  notification.rs  ticket.rs  user.rs
backend/src/routes/: agent_ticket_routes.rs  attachment_routes.rs  auth_routes.rs  comment_routes.rs  kb_routes.rs  message_routes.rs  mod.rs  note_routes.rs  notification_routes.rs  report_routes.rs  ticket_routes.rs  user_routes.rs  ws_routes.rs
backend/src/services/: auth_service.rs  collaboration_service.rs  knowledge_base_service.rs  mod.rs  note_service.rs  notification_services.rs  report_service.rs  ticket_service.rs
backend/src/tests/: unit_tests.rs
backend/src/utils/: hash.rs  jwt.rs  mod.rs  slug.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: body-wrapper.js  layout.js
frontend/src/app/admin-dashboard/: page.js
frontend/src/app/agent-dashboard/: page.js
frontend/src/app/agent-dashboard/tickets/: page.js
frontend/src/app/categories/: page.js
frontend/src/app/categories/create/: page.js
frontend/src/app/create-note/: page.js
frontend/src/app/create-ticket/: page.js
frontend/src/app/dashboard/: page.js
frontend/src/app/dashboard/tickets/: page.js
frontend/src/app/knowledge-base/: page.js
frontend/src/app/knowledge-base/[id]/: page.js
frontend/src/app/knowledge-base/create/: page.js
frontend/src/app/login/: page.js
frontend/src/app/notes/: page.js
frontend/src/app/register/: page.js
frontend/src/app/test/: page.js
frontend/src/app/unauthorized/: page.js
frontend/src/components/: AuthWrapper.js  LogoutButton.js  NotificationsList.js  ProtectedRoute.js  ThemeToggle.js  componentform.js
frontend/src/context/: auth-context.js  theme-context.js
frontend/src/hooks/: useAuth.js  useRoleGuard.js
(+4 files in other folders)
